<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <View
        android:background="@color/statu_bar_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statu_bar" />

    <include layout="@layout/view_title" />
    <FrameLayout
        android:id="@+id/framelayout_activity_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/mine_about_icon_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/about_us"
                android:textColor="#1c1c1c"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/synopsis"
                android:textColor="#1c1c1c"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/about_one"
                android:textColor="@color/text_color_33gray"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_two"
                android:textColor="@color/text_color_33gray"
                android:lineSpacingExtra="3dp"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/features"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="157dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/mine_about_projects_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="13dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/features_one"
                        android:textColor="@color/text_color_33gray"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/features_two"
                        android:textColor="@color/text_color_33gray"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/features_three"
                        android:textColor="@color/text_color_33gray"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/features_four"
                        android:textColor="@color/text_color_33gray"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/features_five"
                        android:textColor="@color/text_color_33gray"
                        android:textSize="@dimen/text_size_small" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="客服电话：4008-705-000"
                android:textColor="@color/text_color_99gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="版本号v3.1.0"
                android:textColor="@color/text_color_99gray"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>