<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_back_login"
            android:layout_width="29dp"
            android:layout_height="37dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="26dp"
            android:padding="10dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="57dp"
                android:src="@drawable/login_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_record"
                android:textColor="@color/text_color_white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edittext_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:hint="@string/phone_num"
                android:inputType="number"
                android:maxLength="11"
                android:textSize="@dimen/text_size_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/devide_color_e5gray" />

            <EditText
                android:id="@+id/edittext_textpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/devide_color_e5gray" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_backgroud_enable"
                android:maxLength="12"
                android:text="@string/login"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_super_big" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_color_99gray" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/devide_color_e5gray"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" />

                <TextView
                    android:id="@+id/textview_now_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/now_register"
                    android:textColor="@color/text_color_99gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>