<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="5dp"
            android:src="@drawable/back"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/center_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/devide_color_e5gray"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/register_linear"
            android:layout_marginTop="35dp">

            <TextView
                style="@style/register_text"
                android:text="手机号" />

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.2"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/register_input_phone_num"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_eegray" />

        <LinearLayout style="@style/register_linear">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.03"
                    android:text="验证码"
                    android:textColor="@color/text_color_33gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/code_et"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.97"
                    android:background="@null"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical|start"
                    android:hint="@string/register_input_validate_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/get_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.9"
                android:background="@drawable/button_backgroud_selector"
                android:enabled="false"
                android:text="@string/get_validate_code"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_eegray" />

        <LinearLayout style="@style/register_linear">

            <TextView
                android:id="@+id/password_old"
                style="@style/register_text"
                android:text="@string/register_new_password" />

            <EditText
                android:id="@+id/password_old_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.3"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/register_enter_new_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_eegray" />

        <LinearLayout style="@style/register_linear">

            <TextView
                style="@style/register_text"
                android:text="@string/register_confirm_password" />

            <EditText
                android:id="@+id/password_new_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2.3"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:hint="@string/register_re_enter_new_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textSize="15sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_color_eegray" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_backgroud_selector"
            android:enabled="false"
            android:textColor="@color/text_color_white"
            android:textSize="18sp"
            android:transitionName="login_share" />

    </LinearLayout>

</LinearLayout>